--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,6 +10,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center" >
                     <p>I’m a passionate Android & iOS mobile developer with the ability of quick learning and adopt new technologies, also eager to follow the latest development trends. I led several international teams remotely to success and I am always looking forward towards new challenges.</p>
+                    <p>Not a long time ago I've started skydiving to reach one of my dreams, to fly with a wingsuit.</p>
                 </div>
             </div>
         </div>
