--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center" >
-                    <p>I’m a passionate Android & iOS mobile developer with the ability of quick learning and adopting new technologies, also eager to follow the latest development trends. I led several international teams remotely to success and I am always looking forward toward new challenges.</p>
+                    <p>I’m a passionate Android & iOS mobile developer with the ability of quick learning and adapting new technologies, also eager to follow the latest development trends. I led several international teams remotely to success and I am always looking forward to new challenges.</p>
                     <p>Not a long time ago I've started skydiving to reach one of my dreams, to fly with a wingsuit.</p>
                 </div>
             </div>
